Fix gap on mobile

--- a/src/Components/Grid/Grid.scss
+++ b/src/Components/Grid/Grid.scss
@@ -65,6 +65,7 @@
         display: grid;
         grid-template-columns: 1fr 1fr;
         grid-auto-flow: dense;
+        gap: 1rem;
         @include tablet {
             align-items: center;
             grid-template-columns: none;
